# prog-playground

./: .gitignore  LICENSE  README.md
agent_practise/first_demo/: demo.py  login.py  menu.py  share.py
agent_practise/toolcalling_agent/: toolcall.py
compile/assembly/: hello  hello.c  hello.i  hello.s
compile/dynamic_seq/: b.c
compile/static_seq/: Makefile  a.c  main.c
concurrent/base/: Makefile  pro_commond.sh  thread_pool_withwait.cpp
concurrent/mutex_cost/: atomic_cost.cpp  mutex_cost.cpp
concurrent/std_async/: Makefile  pro_commond.sh  thread_pool_async_withwait.cpp
cpu/cswch_demo/: process_ctxswch.c  sh_process_ctxswch.sh
cpu/mutex_test/: test_lock_lock.cpp
distribute_demo/: README.md
distribute_demo/config/: server_config.json
distribute_demo/include/: db_manager.h  thread_pool.h
flamegraph_sample/chain/: chaintest.py  not_folded_out.stacks  out.stacks
flamegraph_sample/fileio/: file_io_test.c
flamegraph_sample/off-cpu/: offcputime_libbpf_out.stacks  out.stacks
flamegraph_sample/red-blue-diff/: gen_diff_flamegraph.sh  out.folded1  out.folded2
flamegraph_sample/wakeup/: out.stacks  wake_bcc.stacks  wake_bcc_notfold.stacks  wake_libbpf.stacks
heatmap_sample/: README.md  out.biosnoop
ioserver_demo/: Makefile  README.md
ioserver_demo/config/: server_config.json
ioserver_demo/docker/: Dockerfile.client  Dockerfile.server  docker-compose.yml  init.sql
ioserver_demo/include/: db_manager.h  io_multiplexing.h  logger.h  thread_pool.h
kubernetes/hello/: config.toml  kubectl_cmd_operation.md
kubernetes/redis-pod/: redis-nodeport.yaml  redis-service.yaml
kubernetes/redis-stateful-set/: redis-nodeport.yaml  redis-statefulset.yaml
leveldb/: Makefile  test_leveldb.cpp
memory/dlmalloc_src/: README.md  malloc.c
memory/leak/: Makefile  leak_test.cpp  (+2 more)
storage/rocksdb/: .gdb_history  CMakeLists.txt  Makefile  WriteImpl_calltree_depth3.txt  test_rocksdb_ops.cpp
thread_pool/: thread_pool.cpp  thread_pool_priority.cpp
tools/: README.md
(+95 files in other folders)
